Avoid to overlap gn-features-tables with the footer

--- a/web-ui/src/main/resources/catalog/style/gn_viewer.less
+++ b/web-ui/src/main/resources/catalog/style/gn_viewer.less
@@ -549,7 +549,7 @@
 gn-features-tables, .gn-viewer-info-pane {
   display          : block;
   position         : absolute;
-  bottom           : 1em;
+  bottom           : @gn-bottombar-height;
   left             : 1em;
   right            : 3.8em;
   background-color : rgba(255,255,255, .6);
